fixed scaling issues and grid not rendering correctly on firefox

--- a/src/components/GameContainer/GameContainer.scss
+++ b/src/components/GameContainer/GameContainer.scss
@@ -1,6 +1,6 @@
 .game__container{
   height: 88vh;
-  width: 88vh;
+  width: 89vh;
   overflow: hidden;
   .message{
     height: 100%;
