--- a/src/components/GameUI/GameUI.scss
+++ b/src/components/GameUI/GameUI.scss
@@ -22,7 +22,9 @@
   .main{
     height: 88vh;
     width: 88vh;
-    border: calc(1vh - 4px) solid black;
+    border-left: 4px solid black;
+    border-right: 4px solid black;
+    background: black;
   }
   .players__info{
     display: flex;
